# The_Three_Stooges

./: README.md
homework/: 构建主机端开发环境.docx
homework/AUTO_TOOL_TEST/: Makefile.am  Makefile.in  configure.ac  sum.c  val.c
homework/AUTO_TOOL_TEST/.deps/: get.Po
homework/AUTO_TOOL_TEST/autom4te.cache/: output.1
homework/homework1/: 构建主机端开发环境.docx
homework/homework1/AUTO_TOOL_TEST/: Makefile  configure  main.c  sum.h  val.h
homework/homework1/AUTO_TOOL_TEST/.deps/: main.Po  sum.Po
homework/homework1/AUTO_TOOL_TEST/autom4te.cache/: requests  traces.2
homework/homework2/: 多进程编程.docx  多进程编程.md
homework/homework3/: The three stooges-多线程编程(1).docx  The three stooges-多线程编程.md
homework/homework4/: 构建主机端开发环境（下）.md
homework/homework5/: 构建目标系统.md
homework/homework6/: 综合应用实验.md
homework/homework6/代码/: Makefile  pc.cpp  pi.cpp  scull1.c  socket_host.py  socket_pi.py
xujch/AUTO_TOOL_TEST/: config.h  config.status  get.c  get.h  test_software
xujch/AUTO_TOOL_TEST/.deps/: val.Po
xujch/AUTO_TOOL_TEST/autom4te.cache/: output.2  traces.1  traces.3
